force-app/main/default/objects/Internal_Policy__c/Internal_Policy__c.object-meta.xml
<CustomObject>
    <label>Internal Policy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>