force-app/main/default/objects/Internal_Policy__c/fields/Current_Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Version_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Version Date</label>
    <type>Date</type>
</CustomField>