force-app/main/default/objects/Internal_Policy__c/fields/Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Review</label>
    <type>Date</type>
</CustomField>