force-app/main/default/objects/Internal_Policy__c/fields/Next_Update_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Update_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Update Due</label>
    <type>Date</type>
</CustomField>