force-app/main/default/objects/Internal_Policy__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Policy_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>