force-app/main/default/objects/Internal_Policy__c/fields/Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department__c</fullName>
    <label>Primary Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Departments</valueSetName>
    </valueSet>
</CustomField>