force-app/main/default/objects/Internal_Policy__c/fields/Replaced_By__c.field-meta.xml
<CustomField>
    <fullName>Replaced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced By</label>
    <referenceTo>Internal_Policy__c</referenceTo>
    <relationshipLabel>Superseded Policies</relationshipLabel>
    <relationshipName>Replacement_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>