force-app/main/default/objects/Internal_Policy__c/listViews/Knowledge_Base_Internal_Policy.listView-meta.xml
<ListView>
    <fullName>Knowledge_Base_Internal_Policy</fullName>
    <filterScope>Queue</filterScope>
    <label>Knowledge Base</label>
    <queue>Knowledge_Base</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>